refactor(BE): 피드백 루브릭 채점 제거 + 코멘트형 Content/Delivery 복원
- TimestampFeedback/Response/SaveFeedbackRequest/Mapper 를 main 코멘트형으로 복원
- FeedbackService/Persister 코멘트 저장 경로 복원 (NonverbalScorePersister 제거)
- feedback/rubric, feedback/score, infra/ai 루브릭 어댑터 + 루브릭 리소스 삭제
- RubricCategory enum 을 question 도메인으로 이관 (AnswerResponse contract 유지)
- 세션 피드백 생성 임시 중립화 (PR2 재설계 전 no-op, session_feedback 보존)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>